--- a/index.html
+++ b/index.html
@@ -1,21 +1,90 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Form to PDF</title>
+  <title>Admission Form</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f2f2f2;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
+    .container {
+      background-color: #fff;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      width: 100%;
+      max-width: 400px;
+    }
+
+    h2 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 10px;
+    }
+
+    input {
+      width: 100%;
+      padding: 8px;
+      margin-top: 4px;
+      margin-bottom: 16px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+
+    button {
+      width: 100%;
+      padding: 10px;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #0056b3;
+    }
+  </style>
 </head>
 <body>
-  <h2>Admission Form</h2>
-  <form id="myForm">
-    <label>Full Name:<br><input type="text" id="fullName" required></label><br><br>
-    <label>State of Origin:<br><input type="text" id="state" required></label><br><br>
-    <label>Date of Birth:<br><input type="date" id="dob" required></label><br><br>
-    <label>JAMB Score:<br><input type="number" id="jambScore" required></label><br><br>
-    <label>Course Applied:<br><input type="text" id="course" required></label><br><br>
-    <label>Year Applied:<br><input type="number" id="year" required></label><br><br>
-    <label>Disability (if any):<br><input type="text" id="disability"></label><br><br>
-    <button type="submit">Download PDF</button>
-  </form>
+  <div class="container">
+    <h2>Admission Form</h2>
+    <form id="myForm">
+      <label>Full Name:
+        <input type="text" id="fullName" required>
+      </label>
+      <label>State of Origin:
+        <input type="text" id="state" required>
+      </label>
+      <label>Date of Birth:
+        <input type="date" id="dob" required>
+      </label>
+      <label>JAMB Score:
+        <input type="number" id="jambScore" required>
+      </label>
+      <label>Course Applied:
+        <input type="text" id="course" required>
+      </label>
+      <label>Year Applied:
+        <input type="number" id="year" required>
+      </label>
+      <label>Disability (if any):
+        <input type="text" id="disability">
+      </label>
+      <button type="submit">Download PDF</button>
+    </form>
+  </div>
 
   <script>
     document.getElementById("myForm").addEventListener("submit", function(e) {
@@ -45,4 +114,3 @@
   </script>
 </body>
 </html>
-
