--- a/index.html
+++ b/index.html
@@ -36,15 +36,26 @@
 
     label {
       display: block;
-      margin-bottom: 12px;
+      margin-bottom: 8px;
+      font-weight: bold;
     }
 
-    input {
+    input, select {
       width: 100%;
       padding: 10px;
-      margin-top: 4px;
+      margin-bottom: 16px;
       border: 1px solid #ccc;
       border-radius: 5px;
+    }
+
+    .dob-selects {
+      display: flex;
+      gap: 5px;
+      margin-bottom: 16px;
+    }
+
+    .dob-selects select {
+      flex: 1;
     }
 
     button {
@@ -55,7 +66,6 @@
       border: none;
       border-radius: 5px;
       font-size: 16px;
-      margin-top: 10px;
       cursor: pointer;
     }
 
@@ -81,29 +91,68 @@
       <label>Full Name:
         <input type="text" id="fullName" required>
       </label>
+
       <label>State of Origin:
         <input type="text" id="state" required>
       </label>
-      <label>Date of Birth:
-        <input type="date" id="dob" required>
-      </label>
+
+      <label>Date of Birth:</label>
+      <div class="dob-selects">
+        <select id="dobDay" required></select>
+        <select id="dobMonth" required></select>
+        <select id="dobYear" required></select>
+      </div>
+
       <label>JAMB Score:
         <input type="number" id="jambScore" required>
       </label>
+
       <label>Course Applied:
         <input type="text" id="course" required>
       </label>
+
       <label>Year Applied:
         <input type="number" id="year" required>
       </label>
+
       <label>Disability (if any):
         <input type="text" id="disability">
       </label>
+
       <button type="submit">Download PDF</button>
     </form>
   </div>
 
   <script>
+    // Populate Day
+    const daySelect = document.getElementById("dobDay");
+    for (let i = 1; i <= 31; i++) {
+      daySelect.innerHTML += `<option value="${i}">${i}</option>`;
+    }
+
+    // Populate Month
+    const monthSelect = document.getElementById("dobMonth");
+    const months = ["Jan", "Feb", "Mar", "Apr", "May", "Jun",
+                    "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"];
+    months.forEach((m) => {
+      monthSelect.innerHTML += `<option value="${m}">${m}</option>`;
+    });
+
+    // Populate Year
+    const yearSelect = document.getElementById("dobYear");
+    for (let y = new Date().getFullYear(); y >= 1950; y--) {
+      yearSelect.innerHTML += `<option value="${y}">${y}</option>`;
+    }
+
+    // Get DOB as string
+    function getDOB() {
+      const day = document.getElementById("dobDay").value;
+      const month = document.getElementById("dobMonth").value;
+      const year = document.getElementById("dobYear").value;
+      return `${day} ${month} ${year}`;
+    }
+
+    // PDF generation
     document.getElementById("myForm").addEventListener("submit", function(e) {
       e.preventDefault();
       const { jsPDF } = window.jspdf;
@@ -111,7 +160,7 @@
 
       const fullName = document.getElementById("fullName").value;
       const state = document.getElementById("state").value;
-      const dob = document.getElementById("dob").value;
+      const dob = getDOB();
       const jamb = document.getElementById("jambScore").value;
       const course = document.getElementById("course").value;
       const year = document.getElementById("year").value;
