--- a/confirm.html
+++ b/confirm.html
@@ -2,46 +2,78 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Confirm Your Details</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
+      margin: 0;
       font-family: Arial, sans-serif;
       padding: 20px;
       background-color: #f2f2f2;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
     }
 
     .container {
-      max-width: 600px;
-      margin: auto;
-      background: white;
+      width: 100%;
+      max-width: 500px;
+      background-color: #fff;
       padding: 20px;
-      border-radius: 8px;
+      border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
 
     h2 {
       text-align: center;
+      font-size: 24px;
+      margin-bottom: 20px;
     }
 
     .info {
-      margin: 10px 0;
-      padding: 10px;
+      padding: 12px;
       background: #f9f9f9;
+      margin-bottom: 10px;
       border-left: 4px solid #007bff;
+      font-size: 16px;
+    }
+
+    .button-group {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      margin-top: 20px;
     }
 
     button {
-      margin-top: 20px;
-      padding: 10px 15px;
-      background: #007bff;
-      border: none;
+      padding: 12px;
+      background-color: #007bff;
       color: white;
-      border-radius: 5px;
+      border: none;
+      border-radius: 6px;
+      font-size: 16px;
       cursor: pointer;
+      transition: background 0.3s;
     }
 
     button:hover {
-      background: #0056b3;
+      background-color: #0056b3;
+    }
+
+    @media (max-width: 480px) {
+      .info {
+        font-size: 15px;
+      }
+
+      button {
+        font-size: 15px;
+        padding: 10px;
+      }
     }
   </style>
 </head>
@@ -56,8 +88,10 @@
     <div class="info" id="year"></div>
     <div class="info" id="disability"></div>
 
-    <button onclick="window.location.href='index.html'">Edit</button>
-    <button onclick="downloadPDF()">Download PDF</button>
+    <div class="button-group">
+      <button onclick="window.location.href='index.html'">Edit</button>
+      <button onclick="downloadPDF()">Download PDF</button>
+    </div>
   </div>
 
   <script>
